--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "seed": "node seeds/seed.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "connect-session-sequelize": "^7.1.7",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "express-handlebars": "^7.1.2",
-      "express-session": "^1.18.0",
-      "pg": "^8.11.5",
-      "sequelize": "^6.37.3"
+        "bcrypt": "^5.1.1",
+        "connect-session-sequelize": "^7.1.7",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-handlebars": "^7.1.2",
+        "express-session": "^1.18.0",
+        "pg": "^8.11.5",
+        "sequelize": "^6.37.3"
     },
     "devDependencies": {
-      "eslint": "^9.3.0",
-      "eslint-config-prettier": "^9.1.0",
-      "nodemon": "^3.1.0",
-      "prettier": "^3.2.5"
+        "eslint": "^9.3.0",
+        "eslint-config-prettier": "^9.1.0",
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5"
     }
-  }
+}
