adding event database and seed info

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.19.2",
         "express-handlebars": "^7.1.2",
         "express-session": "^1.18.0",
+        "openai": "^4.0.0",
         "pg": "^8.11.5",
         "sequelize": "^6.37.3"
     },
@@ -27,5 +28,3 @@
         "prettier": "^3.2.5"
     }
 }
-
-
